test/compile_errors/stage1/obj/attempt_to_negate_a_non-integer_non-float_or_non-vector_type.zig
fn foo() anyerror!u32 {
    return 1;
}

export fn entry() void {
    const x = -foo();
    _ = x;
}

// attempt to negate a non-integer, non-float or non-vector type
//
// tmp.zig:6:15: error: negation of type 'anyerror!u32'
